Fix alignment

--- a/modal.css
+++ b/modal.css
@@ -4,8 +4,8 @@
 }
 
 h2.popUp {
-  margin-top: 10%;
-  margin-bottom: 10%;
+  margin-top: 5%;
+  margin-bottom: 3%;
   width: 50;
 }
 
@@ -13,20 +13,26 @@ h2.popUp {
   position: fixed;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 95%;
+  height: 97%;
+  width: 87%;
   z-index: 2;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   background: #fff;
   justify-content: start;
-  margin-right: 3%;
+  margin-right: 6%;
   margin-left: 3%;
   margin-top: 4%;
   border: 1px solid #dfe1e6;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
+}
+
+p {
+  font-size: 0.7em;
+  line-height: 1.5em;
+  margin-bottom: 1px;
 }
 
 .projectPopup {
@@ -101,26 +107,96 @@ h2.popUp {
 .sublinks > ul {
   padding: 0;
   display: flex;
-  width: 50%;
+  width: 70%;
   justify-content: space-around;
   flex-direction: row;
   list-style-type: disc;
   color: #000;
-  margin-left: 3%;
+  margin-left: 2%;
   margin-bottom: 2%;
   direction: ltr;
 }
 
 .sublinks > ul > li {
   list-style-type: disc;
-  left: 5%;
+  padding: 1px;
+  color: #7a869a;
+}
+
+.sublinksround > ul {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  list-style-type: disc;
+  margin-top: 1%;
+  margin-bottom: 0%;
+  padding-right: 10%;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  font-size: 0.8em;
+}
+
+.sublinksround > ul > li {
   color: #7a869a;
 }
 
 @media (min-width: 768px) {
+  p {
+    font-size: 1em;
+    margin-bottom: 1px;
+  }
+
+  .popupLinkContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-content: end;
+    align-items: flex-end;
+    width: 90%;
+    height: 100%;
+  }
+
   .popupContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 90%;
+    width: 95%;
+    z-index: 2;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    background: #fff;
+    margin-right: 3%;
+    margin-left: 3%;
+    margin-top: 1%;
+    border: 1px solid #dfe1e6;
+    border-radius: 16px;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    overflow-y: auto;
+  }
+
+  .popupLinkContainer a {
+    margin: 1%;
+    color: #396df2;
+    padding: 0.5rem 0.5rem;
+    text-align: center;
+    cursor: pointer;
+    border: 1px solid #396df2;
+    border-radius: 9px;
+  }
+
+  .imgsize {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 17.5rem;
+    object-fit: contain;
+    margin-bottom: 0;
+    align-items: center;
+    justify-content: center;
   }
 
   .bottomflex {
@@ -128,15 +204,20 @@ h2.popUp {
     flex-direction: row;
     align-items: flex-start;
     padding: 0;
+    width: 100%;
     height: fit-content;
+    justify-content: flex-start;
+    align-content: space-around;
+    position: absolute;
+    top: 75%;
   }
 
-  .bottomflex > * { flex: 1; }
+  .bottomflex > * { flex: 1.8; }
 
   h2.popUp {
     font-size: 3em;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-top: 3%;
+    margin-bottom: 1%;
   }
 
   h2 {
@@ -153,6 +234,38 @@ h2.popUp {
   }
 
   .sublinksround > ul {
-    margin-top: 1%;
+    padding: 0;
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    list-style-type: disc;
+    margin-top: 5%;
+    margin-bottom: 1%;
+    padding-right: 10%;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+  }
+
+  .sublinks > ul {
+    padding: 0;
+    display: flex;
+    width: 85%;
+    justify-content: space-around;
+    flex-direction: row;
+    list-style-type: disc;
+    color: #000;
+    margin-left: 3%;
+    margin-bottom: 4%;
+    float: right;
+    flex-wrap: nowrap;
+  }
+
+  .sublinks > ul > li {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    justify-content: space-around;
+    list-style-type: disc;
+    margin-left: 20px;
+    color: #7a869a;
   }
 }
