--- a/style.css
+++ b/style.css
@@ -25,7 +25,13 @@ a {
 }
 
 a:hover {
-  color: #0058f1;
+  color: white;
+  background: #2230d2;
+}
+
+a:disabled {
+  color: #5e6c84;
+  background: white;
 }
 
 li {
@@ -430,13 +436,12 @@ hr {
 
 .call-to-action {
   margin-top: 1.5rem;
-  border: 1px solid #020741;
+  border: 1px solid #2230d2;
   border-radius: 8px;
-  color: #000;
+  color: #2230d2;
   justify-content: center;
   font-size: 1rem;
   padding: 1rem;
-  background-color: #b1b8ff;
   margin-bottom: 0;
   z-index: 1;
   width: fit-content;
@@ -445,7 +450,7 @@ hr {
 }
 
 button:hover {
-  background-color: #5564eb;
+  background-color: #2230d2;
   color: #fff;
 }
 
@@ -811,22 +816,6 @@ textarea {
     transition: margin-left 5s;
   }
 
-  .call-to-action {
-    margin-top: 1.5rem;
-    border: 1px solid #000745;
-    border-radius: 8px;
-    color: #000;
-    justify-content: center;
-    font-size: 1rem;
-    padding: 1rem;
-    background-color: #feaeae;
-    margin-bottom: 0;
-    z-index: 1;
-    width: fit-content;
-    white-space: nowrap;
-    font-weight: bold;
-  }
-
   .imgdesk1,
   .imgdesk2,
   .imgdesk3,
@@ -861,13 +850,13 @@ textarea {
   }
 
   button:hover {
-    background-color: #5564eb;
-    color: #0d00c9;
+    background-color: #0d00c9;
+    color: white;
   }
 
   button:active {
-    background-color: #2230d2;
-    color: #fff;
+    background-color: white;
+    color: #2230d2;
   }
 
   button :disabled {
